--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-remark": "^2.13.1",
     "gatsby-transformer-sharp": "^2.9.0",
+    "netlify-cms": "^2.10.78",
     "netlify-cms-app": "^2.14.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
