--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,20 +14,11 @@ collections:
     media_folder: ""
     public_folder: ""
     path: "{{title}}/index"
-    editor:
-      preview: false
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
-      - widget: string
-        name: slug
-        label: Slug
-        required: true
-        pattern:
-          [
-            "^[a-z0-9]+(?:-[a-z0-9]+)*$",
-            "A slug can have no spaces or special characters",
-          ]
-        hint: >-
+      - name: uniqueId
+        label: UniqueId
+        widget: uniqueId
