--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,9 +16,10 @@ collections:
     path: "{{title}}/index"
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
       - name: uniqueId
         label: UniqueId
-        widget: uniqueId
+        widget: categories
