--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,13 +10,13 @@ collections:
     label: "Blog"
     folder: "content/blog"
     create: true
-    slug: "index"
+    slug: "/blog/{{slug}}"
     media_folder: ""
     public_folder: ""
     path: "{{title}}/index"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Slug", name: "slug", widget: "string" }
+      # - { label: "Slug", name: "slug", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
